--- a/src/pug/components/tile.pug
+++ b/src/pug/components/tile.pug
@@ -10,7 +10,7 @@ mixin tile(value = {})
 
     .layer-tile-footer
       if title
-        .layer-tile-title= title
+        .layer-tile-title.style-bold= title
 
       if content
-        span.layer-tile-content.style-font-12= content
+        .layer-tile-content.layout-padding-top-small.style-line-height-spaced.style-font-14= content
