--- a/src/pug/pages/about.pug
+++ b/src/pug/pages/about.pug
@@ -32,8 +32,11 @@ block content
         })
 
         section(itemscope itemtype="https://schema.org/SiteNavigationElement")
-          span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left H
-          +p("ello, glad to have you here. My name is Olaoluwa (if you’re trying to pronounce it, the trick is to take it 3 letters at a time). You might have noticed the name on the site is not Olaoluwa, and the reason is that it turns out Joseph is a lot easier on the tongue.   <br> <br>  As the eldest of 4 children, I have picked up on several skills and philosophies including the natural ability to lead, a keen sense of responsibility, a strong inclination to maintain peaceful interactions, and the continuous need to improve oneself and surroundings. Unsurprisingly, a recent professional development assessment (developed by Plum.io) places adaptation, teamwork, conflict resolution and innovation as some of my top talents. This, and many other projects I have led or collaborated on are evident of the skilled I have accrued thus far.  <br> <br>  Although I don’t talk about nor like to brag about it, I have been quite fortunate in my educational career, graduating with a High Distinction from Ontario Tech University in a Mechanical (specifically Mechatronics) Engineering program. I am currently working towards my master’s degree under the supervision of two of the smartest people at Ontario Tech University, Drs. ")
+          span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left A
+          +p("s the eldest of 4 children, I have picked up on several skills and philosophies including a natural inclination for leadership, a keen sense of responsibility, a strong ability to maintain peaceful interactions, and the continuous need to improve myself and surroundings. Unsurprisingly, a recent professional development assessment (developed by Plum.io) places adaptation, teamwork, conflict resolution and innovation as some of my top talents. This, and many other projects I have led or collaborated on are also evidences of the skilled I have accrued thus far.") 
+          br
+          br
+          +p("I have been quite fortunate in my educational career, graduating with a High Distinction from Ontario Tech University in a Mechanical (specifically Mechatronics) Engineering program. I am currently working towards my master’s degree under the supervision of two of the best at Ontario Tech University, Drs. ")
           +link({
             href: "https://www.xianke-lin.com/",
             content: "Xianke Lin"
@@ -44,12 +47,30 @@ block content
             content: "Haoxiang Lang"
           })(target="_blank" rel="noopener" title="The link to a page about Dr. Haoxiang Lang.")
           span=". "
-          +p("My thesis is set to combine the use of neural networks and predictive control algorithms to ensure that robotic and automotive battery systems are safe, and last long while being fast charged. This is a very exciting and fulfilling research project due to its necessity for future economic growth and sustainability.  <br> <br>  In case you haven’t noticed, I am majorly enthusiastic about all things Mechatronics. The sheer brilliance of how mechanical, electronics and software components cohesively mesh together in a harmonious synergy is absolutely fascinating to me. This fascination from a very young age has always meant that I was unwavered in what I knew I was born to do. One of my now software engineer friends used to joke about creating the Terminators and Skynet together, you know, the whole “I’ll be back” and all. Thankfully, we haven’t fallen to the dark side. My goal now is to create assistive Mechatronic technologies to improve the lives of many.  <br> <br>  As far as I can remember, my personal motto has always been to leave things better than I found it. This has helped motivate most of my life choices up till now. My recent experiences have even further solidified this philosophy. After completing a 16-month internship as a photovoltaic designer and New Product Introduction (NPI) coordinator at Phoenix, my approach to problem solving and continuous improvement has been revamped. I now understand the value of Kaizen and asking why. My observation of problems is now unequivocally from the top-down in order to effectively solve them. And so far, that need to continuously learn, and improve the tools and people around me has established opportunities and allowed for more efficient processes.  <br> <br>  So now that you know one or two things about me, why don’t you take a peek at some of the work under my belt or better yet, get in touch? Maybe we’ll grab a coffee and talk about our visions for the future and how I can be of service. For more information check out my resume by hitting the button below to view my curriculum vitae. <br> <br>  <br>")
+          +p("My thesis is set to combine the use of neural networks and predictive control algorithms to ensure that robotic and automotive battery systems are safe, and last long while being fast charged. This is a very exciting and fulfilling research project due to its necessity for future economic growth and sustainability.") 
+          br
+          br 
+          +p("I am enthusiastic about all things Mechatronics. The sheer brilliance of how mechanical, electronics and software components cohesively mesh together in a harmonious synergy is absolutely fascinating to me. This fascination from a very young age has always meant that I was unwavered in what I knew I was born to do. One of my now software engineer friends used to joke about creating the") 
+          i Terminators 
+          +p("and") 
+          i Skynet 
+          +p("together, screaming that ")
+          i “we’ll be back”. 
+          +p("Thankfully, we haven’t fallen to the dark side. My goal now is to create assistive Mechatronic technologies to improve the lives of many.")
+          br
+          br 
+          +p("As far as I can remember, my personal motto has always been to leave things better than I found it. This has helped motivate most of my life choices up till now. My recent experiences have even further solidified this philosophy. After completing a 16-month internship as a photovoltaic designer and new product introduction (NPI) coordinator at Celestica, my approach to problem solving and continuous improvement has been revamped. I now understand the value of Kaizen and asking why. My observation of problems is now unequivocally from the top-down in order to effectively solve them. And so far, that need to continuously learn, and improve the tools and people around me has established opportunities and allowed for more efficient processes. ")
+          br
+          br  
+          +p("So now that you know one or two things about me, feel free to peek at some my work. Or better yet, get in touch. Maybe we’ll grab a coffee and talk about our visions for the future and how I can be of service. For more information check out my resume by hitting the button below.")
+          br
+          br  
+          br
 
           +link({
               class: "layout-right action-btn action-btn-expand-scale action-btn-smooth layer-secondary-btn focus-box",
               href: "https://drive.google.com/file/d/13iItslKMyqXlFdqr240vfbMlnwfHkFk_/view?usp=sharing"
-          }, true)(title="View my CV." target="_blank"  rel="noopener")
+          }, true)(title="View my CV/resume." target="_blank"  rel="noopener")
             span.layout-padding-nano
             section.action-btn-layout
               span.action-btn-group.layout-padding-smaller 
