--- a/src/pug/pages/portfolio.pug
+++ b/src/pug/pages/portfolio.pug
@@ -4,17 +4,17 @@ block pageInfo
   -
     let page = {
       
-      url: "/projects",
-      name: "projects",
-      title: "My projects — A showcase of some of my portfolio of projects I have taken on.",
+      url: "/portfolio",
+      name: "portfolio",
+      title: "Portfolio — A showcase of some of the projects I have taken on.",
       description: "A potfolio of projects I have completed, and even some that are still on-going..."
     };
 
 block hero
   //- Banner layer
   +banner({
-    title: "My porfolio of projects.",
-    content: "A potfolio of projects I have completed, and even some that are still on-going.",
+    title: "Portfolio",
+    content: "A list of projects I have completed, and even some that are still on-going.",
     image: {
       class: "effect-parallax hero-img",
       src: "cloudinary/brown-book-on-table",
@@ -26,40 +26,27 @@ block hero
 block content
   //- Intro layer
   +layer({
-    class: "layout-padding-horz-default--device-gt-tablet"
+    class: "layout-padding-top-sub-large layout-padding-horz-default--device-gt-tablet"
   })
     +layout({
-      class: "layout-shorten layout-contain"
+      class: "layout-shorten-horz layout-contain"
     })
       +main({
         class: "layout-padding-vert-small layout-clearfix"
       })
-        +p
-          //- span.layout-margin-horz-left.layout-inline-block= " "
-          span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left A
-          span.layout-inline.layout-margin-dull s a mechatronics engineer I am adept at electrical, mechanical, and robotics, this allows me to take on a variety of projects, some more electrical, some robotic. I am often wonderstruck by mechatronics, and I like to create things that will leave others as wonderstruck as me when I see an amazing project.
-          +p("<br>")
-          p.layout-inline.layout-margin-dull(lorem="3")
-          +p("<br> <br> I am a curious person, so, I take on the most intresting projects. I love to explore new ways to approach problems and to solve them in a manner that lets me push myself to new heights. My dream is to work on a project that revelutionizes the world, and some day I believe I will achieve my goal. How about that,")
-          +link({
-            href: "/",
-            class: "layout-margin-horz-left-mini",
-            content: "wanna go back home?"
-          })
+        +p("This section of the website is dedicated to taking you through the journey of ongoing and completed projects. Tune in for frequent updates as I tack on more projects and complete other activities. ")
 
   //- Image Column layer
   +layer
     +layout({
       class: "layout-contain-large"
     })
-      +main({
-        class: "layout-shorten-vert"
-      })
+      +main
         +row({
           class: "layout-margin-dull"
         })
           +column({
-            class: "layout-col-12 layout-padding-small"
+            class: "layout-col-6 layout-padding-small"
           })
             +link({
               href: "/projects/boxer",
@@ -68,6 +55,7 @@ block content
               +tile({
                 title: "Boxer",
                 class: "layer-box layer-surface layout-block layer-tile-outline",
+                content: "Boxer is an all-wheel drive semi-autonomous platform designed and developed for LinLab by myself and a few quirky undergraduate students...",
                 image: {
                   class: "",
                   src: "cloudinary/joseph-projects/boxer/03_ADR_Render_04",
@@ -76,7 +64,7 @@ block content
               })
 
           +column({
-            class: "layout-col-12 layout-padding-small layout-padding-vert-large"
+            class: "layout-col-6 layout-padding-small layout-padding-vert-large"
           })
             +link({
               href: "/projects/battery-manager",
@@ -93,7 +81,7 @@ block content
               })
 
           +column({
-            class: "layout-col-12 layout-padding-small layout-padding-vert-large"
+            class: "layout-col-6 layout-padding-small layout-padding-vert-large"
           })
             +link({
               href: "/projects/sarbot",
