--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -135,7 +135,7 @@ body {
     word-wrap: break-word;
     line-height: 1.15;
     font-weight: 400;
-    font-size: 15px;
+    font-size: 14px;
 
     @media (max-width: 300px) {
         word-break: break-all;
@@ -278,12 +278,12 @@ a {
 
 // For touch screen devices
 a,
-button {
+button, input {
     -webkit-tap-highlight-color: transparent;
     background-image: none;
     outline: 0;
 
-    @media #{$screen-size-lt-tablet} {
+    @media #{$screen-size-phone} {
         user-select: none;
     }
 
@@ -429,26 +429,14 @@ main {
     }
 }
 
-.layer,
-.footer {
-    a.focus-box {
-        & {
-            border: 2px solid transparent;
-            border-radius: 3px;
-            padding: 3px 5px;
-            line-height: 1.5;
-            contain: paint;
-            // padding-left: 0;
-
-            @media #{$screen-size-lt-tablet} {
-                padding: 5px 8px;
-            }
-        }
-
-        &:focus {
-            border-color: $secondary;
-            border-color: var(--secondary, $secondary);
-        }
+a, button,input {
+    &:focus-visible {
+    transition: box-shadow ease 0.25s;
+        --tw-ring-offset-shadow: 0 0 0 4px #{transparentize($secondary, 0.5)};
+        --tw-ring-shadow: 0 0 0 calc(4px + var(--tw-ring-offset-width, 0px)) var(--tw-ring-color);
+        box-shadow: var(--tw-ring-offset-shadow),var(--tw-ring-shadow),var(--tw-shadow, 0 0 #0000);
+        --tw-ring-color: #{transparentize($secondary-light, 0.5)};
+        border-radius: 5px;
     }
 }
 
