--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -6,7 +6,6 @@
     font-family: $regular-font;
     line-height: 1.85;
     position: static;
-    contain: content;
     font-size: 17px;
     display: block;
     width: 100%;
@@ -122,7 +121,9 @@
     }
 
     &:not(.banner-mode) &-hero .layer-image {
+        &, &:focus-visible {
         border-radius: 15px;
+        }
     }
 
     &.banner-mode .layer-image figcaption {
@@ -394,7 +395,9 @@
 
         @for $sz from 1 through 20 {
             &-radius-#{$sz} {
+                &, &:focus-visible {
                 border-radius: #{$sz}px;
+                }
             }
         }
 
@@ -405,7 +408,9 @@
     }
 
     &-round {
+        &, &:focus-visible {
         border-radius: 20em;
+        }
     }
 
     &-tile {
@@ -417,7 +422,9 @@
 
         &-outline .layer-image-overlay {
             border: 4px solid transparent;
+            &, &:focus-visible {
             border-radius: 8px;
+            }
         }
 
         &-outline:hover .layer-image-overlay {
@@ -447,14 +454,18 @@
 
         &,
         .layer-image {
+            &, &:focus-visible {
             border-radius: 8px;
+            }
         }
 
         &-flat {
             &,
             & .layer-image,
             & .layer-image-overlay {
+                &, &:focus-visible {
                 border-radius: 0 !important;
+                }
             }
         }
 
@@ -463,7 +474,9 @@
                 &,
                 & .layer-image,
                 & .layer-image-overlay {
+                    &, &:focus-visible {
                     border-radius: 0 !important;
+                    }
                 }
             }
         }
@@ -489,7 +502,6 @@
         pointer-events: auto;
         font-size: 24px;
         position: fixed;
-        contain: content;
         bottom: 15px;
         z-index: 250;
         // width: 100%;
@@ -587,7 +599,9 @@
             border: 2px solid;
             @include applyTheme(border-color, "mid-dark");
             position: relative;
+            &, &:focus-visible {
             border-radius: 3px;
+            }
             padding: 0.8em $padding-horz;
             vertical-align: middle;
             width: 100%;
