--- a/src/scss/components/navbar.scss
+++ b/src/scss/components/navbar.scss
@@ -74,6 +74,7 @@
             align-items: center;
             flex-wrap: nowrap;
             display: flex;
+            line-height: $height;
         }
 
         &-logo {
@@ -89,7 +90,8 @@
         &-title {
             transition: color #{$transitionDuration} ease;
             letter-spacing: 0.03em;
-            line-height: $height;
+            display: flex;
+            align-items: center;
             padding-left: $size;
             position: relative;
             font-size: 17px;
@@ -97,10 +99,8 @@
             @include applyTheme(color, "dark");
 
             & .name {
-                position: absolute;
                 font-family: $bold-font;
                 font-weight: 800;
-                top: 1.5px;
             }
 
             &,
@@ -131,7 +131,7 @@
             justify-content: center;
             align-items: center;
             white-space: nowrap;
-            overflow-y: hidden;
+            // overflow-y: hidden;
             list-style: none;
             display: flex;
             width: 100%;
@@ -260,11 +260,12 @@
             }
 
             &-main {
-                transition: transform #{$transitionDuration} ease-out, opacity .3s ease .1s;
+                transition: transform #{$transitionDuration} ease-out, opacity .3s ease .1s, visibility .3s ease .1s;
                 transform: translate3d(0, -100%, 0);
                 display: block;
                 width: 100%;
                 opacity: 0;
+                visibility: hidden;
                 z-index: 0;
             }
 
@@ -290,6 +291,7 @@
                 .navbar-main {
                     transform: translate3d(0, 0, 0);
                     opacity: 1;
+                    visibility: visible;
                 }
             }
 
