--- a/src/pug/pages/projects/boxer.pug
+++ b/src/pug/pages/projects/boxer.pug
@@ -62,30 +62,27 @@ block content
             | This work is still a work in progress, but I will periodically update it.
 
   //- Next page layer
-  +link({
-    href: "/projects/battery-manager",
-    class: "layout-block"
-  }, true)
-    +layer({
-      class: "layout-padding-horz-default--device-gt-tablet layer-black layer-next"
-    })
+  +layout({
+    class: "layout-contain-large layer-round layout-padding-horz-small layout-padding-horz--device-gt-tablet"
+  })
+    +link({
+      href: "/projects/battery-manager",
+      class: "layout-block layout-padding-horz-default--device-gt-tablet layer-black layer-next"
+    }, true)
       +head({
         class: "layout-padding-top-default"
       })
         h3.layer-title.style-font-light.style-font-thin.style-spaceout.style-font-default--device-gt-tablet.style-font-20 Next
-      +layout({
-        class: "layout-contain layout-padding-horz--device-gt-tablet"
-      })
         +main({
-          class: "layout-padding-vert-sub-large--device-gt-tablet"
+          class: "layout-padding-vert-sub-large"
         })
           p.layer-content.style-font-bold.style-400.style-font-large--device-gt-tablet.style-font-sub-large--device-lt-tablet.style-line-height Battery Manager
 
-        +tile({
-          class: "layer-box layer-box-flat-mobile layer-tertiary-dark layer-shadow--2 layout-margin-vert-top-larger layout-block layer-tile-outline",
-          image: {
-            class: "",
-            src: "cloudinary/joseph-projects/battery-manager/BatteryTester_Diag",
-            alt: "An image of the battery testing workstation box.",
-          }
-        })
+          //- +tile({
+          //-   class: "layer-box layer-box-flat-mobile layer-tertiary-dark layer-shadow--2 layout-margin-vert-top-larger layout-block layer-tile-outline",
+          //-   image: {
+          //-     class: "",
+          //-     src: "cloudinary/joseph-projects/battery-manager/BatteryTester_Diag",
+          //-     alt: "An image of the battery testing workstation box.",
+          //-   }
+          //- })
