chore: fix small bug

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -26,10 +26,10 @@ block content
           h3.h5.style-font-30--device-phone.style-primary-dark.style-bold Hi, I’m Joseph.
           +p("For about a decade now, I have actively sought to leave the state of things better than I found it. I am a Mechatronics engineer at heart and on paper. I integrate hardware and software into harmonious alliance to solve societal pain points. <br><br> I am always on my feet looking for the next opportunity. Through continuous improvement, determination, and a foresight of opportunity, I seek to achieve my goals. Afterall, the game isn’t changed until the game is played. ")
 
-  div.layout-margin-horz-small.layer-capsule
+  div.layout-margin-horz-small
     //- Skills Column layer
     +layer({
-      class: "layout-contain-large layer-border-radius-12"
+      class: "layout-contain-large layer-capsule"
     })
       +layout({
         class: "layer-primary-dark layout-padding-horz-default--device-gt-tablet"
